--- a/src/views/baobiao/view.html
+++ b/src/views/baobiao/view.html
@@ -1,9 +1,12 @@
 
-<script src="../../../../Scripts/baobiaolist_business.js"></script>
+
 <link href="../../../../Content/Home.css" rel="stylesheet" />
 <link href="../../../../Content/hsc-form.css" rel="stylesheet" />
 <script type="text/html" template >
     {{#  LoadData(d.params.id,d.params.tableid,d.params.layerindex)}}
+</script>
+<script type="text/html" template>
+    <script src="{{layui.setter.base}}/Scripts/baobiaolist_business.js"></script>
 </script>
 <!--结束-->
 <div class="layui-fluid" style="background-color:#ffffff;">
