--- a/src/views/bill/y-bill/index.html
+++ b/src/views/bill/y-bill/index.html
@@ -1,5 +1,7 @@
-﻿
-<script src="../../../../Scripts/ybill_business.js"></script>
+﻿<script type="text/html" template>
+<script src="{{layui.setter.base }}/Scripts/ybill_business.js"></script>
+</script>
+
 <link href="../../../../Content/Home.css" rel="stylesheet" />
 <style>
     .fywz {
@@ -28,7 +30,7 @@
                         </div>
                    
                     <div class="m-search-item">
-                            <select name="BillType" id="BillType" lay-filter="Type">
+                            <select name="" id="" lay-filter="Type">
                                     <option value="2">账单类型</option>
                                     <option value="0">收款账单</option>
                                     <option value="1">付款账单</option> 
