--- a/src/views/bill/z-bill/fukuan.html
+++ b/src/views/bill/z-bill/fukuan.html
@@ -1,5 +1,6 @@
 
-<script src="../../../../Scripts/fukuan_business.js"></script>
+
+
 <link href="../../../../Content/Home.css" rel="stylesheet" />
 <link href="../../../../Content/hsc-form.css" rel="stylesheet" />
 <style>
@@ -7,6 +8,9 @@
 </style>
 <script type="text/html" template >
     {{#  LoadData(d.params.id,d.params.tableid,d.params.layerindex,d.params.btnOption)}}
+</script>
+<script type="text/html" template>
+    <script src="{{layui.setter.base }}/Scripts/fukuan_business.js"></script>
 </script>
 <script id="billreceivescript" type="text/html">
     {{# var doc = layui.htcsLG;}}
