--- a/src/views/contract/z-contract/index.html
+++ b/src/views/contract/z-contract/index.html
@@ -1,4 +1,8 @@
-<style>
+<script type="text/html" template>
+    <script src="{{layui.setter.base}}/Scripts/Contract_business.js"></script>
+</script>
+    <title>租客合同</title>
+    <style>
         .fywz {
             position: absolute;
         }
@@ -10,9 +14,6 @@
        }
        .multi dl dd.layui-this{background-color:#fff}
     </style>
-    <title>租客合同</title>
-    <script src="../../../Scripts/Contract_business.js"></script>
-    <script src="../../../../Scripts/Common/public-base.js"></script>
     <link href="../../../Content/Home.css" rel="stylesheet" />
     <body style="overflow-y: scroll;">
         <!--结束-->
