--- a/src/views/guest/view.html
+++ b/src/views/guest/view.html
@@ -1,6 +1,8 @@
 
 <link href="../../../../Content/hsc-form.css" rel="stylesheet" />
-<script src="../../../../Scripts/jquery-1.10.2.js"></script>    
+<script type="text/html" template>
+    <script src="{{layui.setter.base }}/Scripts/jquery-1.10.2.js"></script>
+  </script>
 <style>
   .topsend{padding-left:10px;}
   .timeimg{width:100px;height: 160px;margin-right: 10px;margin-top: 5px;}
