--- a/src/views/house/rz.html
+++ b/src/views/house/rz.html
@@ -1,6 +1,7 @@
 
-<script src="../../../../Scripts/rz_business.js"></script>
-<link href="../../../../Content/Home.css" rel="stylesheet" />
+<script type="text/html" template>
+    <script src="{{layui.setter.base }}/Scripts/rz_business.js"></script>
+  </script><link href="../../../../Content/Home.css" rel="stylesheet" />
 <style>
     .fywz {
         position: absolute;
