--- a/src/views/msystem/menu/index.html
+++ b/src/views/msystem/menu/index.html
@@ -5,8 +5,12 @@
    body{overflow-y: scroll;}
 </style>
 <title>菜单管理</title>
-<script src="../../../Scripts/menu_business.js"></script>
-<script src="../../../../Scripts/Common/public-base.js"></script>
+<script type="text/html" template>
+    <script src="{{layui.setter.base }}/Scripts/menu_business.js"></script>
+   
+
+</script>
+
 <link href="../../../Content/Home.css" rel="stylesheet" />
 <body style="overflow-y: scroll;">
     <!--结束-->
