--- a/Content/Home.css
+++ b/Content/Home.css
@@ -118,7 +118,11 @@ ul.hcs-menu  li a{
             /* padding-left:40px;
             padding-right:40px; */
             padding-top:20px;
-            padding-bottom:10px;
+            padding-bottom:8px;
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+        .hm-search{
             padding-left: 20px;
             padding-right: 20px;
         }
@@ -131,6 +135,13 @@ ul.hcs-menu  li a{
             padding-left:20px;
             
            vertical-align: bottom;
+           cursor: pointer;
+        }
+        .all-row {
+            float:right;
+            display:block;
+            cursor: pointer;
+            padding-left:20px;
            cursor: pointer;
         }
           .caidan-icon{float:right;cursor:pointer;display:block;}
