--- a/src/views/base/muban/index.html
+++ b/src/views/base/muban/index.html
@@ -1,5 +1,7 @@
 
-<script src="../../../../Scripts/contract.js"></script>
+<script type="text/html" template>
+    <script src="{{layui.setter.base }}/Scripts/contract.js"></script>
+</script>
 <link href="../../../../Content/Home.css" rel="stylesheet" />
 <style>
     .fywz {
