--- a/src/views/bill/z-bill/receive.html
+++ b/src/views/bill/z-bill/receive.html
@@ -1,5 +1,7 @@
 
-<script src="../../../../Scripts/billlist_business.js"></script>
+<script type="text/html" template>
+    <script src="{{layui.setter.base }}/Scripts/billlist_business.js"></script>
+</script>
 <link href="../../../../Content/Home.css" rel="stylesheet" />
 <link href="../../../../Content/hsc-form.css" rel="stylesheet" />
 <script type="text/html" template >
