--- a/src/views/gongdan/Renovation/index.html
+++ b/src/views/gongdan/Renovation/index.html
@@ -1,5 +1,8 @@
 
-<script src="../../../../Scripts/Renovation_business.js"></script>
+
+<script type="text/html" template>
+    <script src="{{layui.setter.base }}/Scripts/Renovation_business.js"></script>
+</script>
 <link href="../../../../Content/Home.css" rel="stylesheet" />
 <style>
     .fywz {
