--- a/src/views/gongdan/Renovation/shenhe.html
+++ b/src/views/gongdan/Renovation/shenhe.html
@@ -1,5 +1,8 @@
 <link href="../../../../Content/hsc-form.css" rel="stylesheet" />
-<script src="../../../../Scripts/jquery-1.10.2.js"></script>
+<script type="text/html" template>
+  <script src="{{layui.setter.base }}/Scripts/jquery-1.10.2.js"></script>
+</script>
+baojie_business
 <style>
     .layui-table-cell{
    overflow:visible !important;
