--- a/src/views/gongdan/Repaire/view.html
+++ b/src/views/gongdan/Repaire/view.html
@@ -1,5 +1,7 @@
 <link href="../../../../Content/hsc-form.css" rel="stylesheet" />
-<script src="../../../../Scripts/jquery-1.10.2.js"></script>
+<script type="text/html" template>
+    <script src="{{layui.setter.base }}/Scripts/jquery-1.10.2.js"></script>
+  </script>
 <style>
     .layui-table-cell{
    overflow:visible !important;
