--- a/src/views/house/z-house/edit.html
+++ b/src/views/house/z-house/edit.html
@@ -42,10 +42,11 @@ img {
                 alldata.push(result.numberData);
                 doc.objectQuery(url, { "Id": id }, function (data) {
                 alldata.push(data.numberData);
-                doc.objectQuery(storeurl,  {"PageSize":100000,"PageIndex":1}, function (data) {
+                doc.objectQuery(storeurl,  {"PageSize":100000,"PageIndex":1,"regtype":4}, function (data) {
                 alldata.push(data.numberData);
                 var image=alldata[1].PublicImg;
                 var arr=new Array();
+                debugger;
                 if(image!=null&&image!="undefined"){
                     image=image.substring(0,image.length-1);
                     arr=image.split(';');
@@ -203,6 +204,27 @@ img {
         }
         return arr;
        }  
+       function  parsesign(value){
+           debugger;
+           if(value==0){
+              return  "未知";
+            }
+            if(value==1){
+              return  "到期";
+            }
+            if(value==2){
+                return  "违约";
+            }
+            if(value==3){
+                return  "转租";
+            }
+            if(value==4){
+                return  "新房";
+            }
+            if(value==5){
+                return  "协议退房";
+            }
+       }  
 </script>
 <script type="text/html" template >
     {{#  LoadData(d.params.id,d.params.tableid,d.params.layerindex)}}
@@ -246,9 +268,9 @@ img {
                      <option value="">请选择</option>
                    
                      <option value="东">东</option>
-                     <option value="西">东</option>
-                     <option value="南">东</option>
-                     <option value="北">东</option>
+                     <option value="西">西</option>
+                     <option value="南">南</option>
+                     <option value="北">北</option>
                      <option value="东南">东南</option>
                      <option value="东北">东北</option>
                      <option value="西南">西南</option>
@@ -259,6 +281,20 @@ img {
                  </div> 
                </div>
                
+
+               <div class="layui-inline"> 
+                    <label class="layui-form-label">房源标记</label> 
+                    <div class="layui-input-inline"> 
+                         <select name="sign" lay-verify="" id="sign">
+                                <option value="{{d[1].sign}}">{{parsesign(d[1].sign)}}</option>
+                                 <option value="3">转租</option>
+                              
+                         </select>  
+                    </div> 
+                   </div> 
+
+
+
              </div> 
              
              <div class="layui-form-item"> 
