--- a/src/views/house/z-house/publicview.html
+++ b/src/views/house/z-house/publicview.html
@@ -363,6 +363,7 @@ img {
            
     <div id="bill-edit-view" class="child-view">
     </div>
-   
-    <script src="../../../../Scripts/Common/jquery.autocomplete.js"></script>
+    <script type="text/html" template>
+        <script src="{{layui.setter.base }}/Scripts/jquery.autocomplete.js"></script>
+      </script>
     <link href="../../../../Content/jquery.autocomplete.css" rel="stylesheet" />  
