--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,4 +1,9 @@
-<script src="../../Scripts/index_business.js"></script>
+
+
+<script type="text/html" template>
+    <script src="{{layui.setter.base }}/Scripts/index_business.js"></script>
+
+</script>
 <link href="../../../../Content/Home.css" rel="stylesheet" />
 </style>
 <script id="zcontractbtnscribt" type="text/html">
