--- a/src/views/liushui/index.html
+++ b/src/views/liushui/index.html
@@ -1,5 +1,7 @@
 
-<script src="../../../../Scripts/liushui_business.js"></script>
+<script type="text/html" template>
+    <script src="{{layui.setter.base }}/Scripts/liushui_business.js"></script>
+  </script>
 <link href="../../../../Content/Home.css" rel="stylesheet" />
 <style>
     .fywz {
