--- a/src/views/msystem/adress/index.html
+++ b/src/views/msystem/adress/index.html
@@ -19,7 +19,9 @@
     }
 </style>
 <title>系统用户</title>
-<script src="../../../../Scripts/adress_business.js"></script>
+<script type="text/html" template>
+    <script src="{{layui.setter.base }}/Scripts/adress_business.js"></script>
+  </script>
 <link href="../../../../Content/Home.css" rel="stylesheet" />
 <!--结束-->
 <div class="layui-fluid" style="background-color:#ffffff;">
