--- a/src/views/msystem/sysrole/index.html
+++ b/src/views/msystem/sysrole/index.html
@@ -18,7 +18,10 @@
         background-color: #FFF;
     }
 </style>
-<script src="../../../../Scripts/sysrole_business.js"></script>
+<script type="text/html" template>
+    <script src="{{layui.setter.base }}/Scripts/sysrole_business.js"></script>
+
+</script>
 <link href="../../../../Content/Home.css" rel="stylesheet" />
 <!--结束-->
 <div class="layui-fluid" style="background-color:#ffffff;">
