--- a/src/views/msystem/sysuser/edit.html
+++ b/src/views/msystem/sysuser/edit.html
@@ -87,7 +87,7 @@
             }
             function EventBtn(storeid)
             {
-            doc.objectQuery("api/cellname/Querylist", {"PageSize":100000,"PageIndex":1}, function (result) {  
+            doc.objectQuery("api/cellname/Querylist", {"PageSize":100000,"PageIndex":1,"regtype":4}, function (result) {  
                 debugger; 
                 var realdata = result.numberData;
                 var getTpl = storescript.innerHTML,
