--- a/src/views/upload/index.html
+++ b/src/views/upload/index.html
@@ -1,22 +1,26 @@
-
-<script src="../../../Scripts/Common/uploadjs.js"></script>
-<link href="../../../../../Content/uploadcss.css" rel="stylesheet" />
+<script src="../../../../Scripts/Common/uploadjs.js"></script>
+<link href="../../../../Content/hsc-form.css" rel="stylesheet" />
+<link href="../../../../Content/uploadcss.css" rel="stylesheet" />
 <script type="text/html" template >
     {{#  LoadData(d.params.img,d.params.type,d.params.layerindex)}}
 </script>
+<form class="layui-form  layui-form-pane hcs-form form-panel"  lay-filter="formcontract" action="" >
+<div class="form-content"> 
 <div class="layui-upload">
             <button type="button" class="layui-btn" id="test2" style="margin-left:20px;margin-top:20px;">选择图片</button>
-            <blockquote class="layui-elem-quote layui-quote-nm" style="margin-top: 10px;background-color:#e2e2e2;height:200px;">     
+            <blockquote class="layui-elem-quote layui-quote-nm" style="overflow: auto;margin-top: 10px;background-color:#e2e2e2;height:auto;min-height: 200px;">     
                 <div class="layui-upload-list" id="demo2" >
                    
                 </div>
                 <div style="clear:both;"></div>
             </blockquote>
         </div>
-        <div class="form-bottom">
-            <div class="form-wrap">
-                <a class="layui-btn layui-btn layui-btn-primary" id="cancel1">取消</a>
-                <a class="layui-btn" id="imgsave"  lay-submit="">完成</a>
-            </div>
+      
+    </div>
+    <div class="form-bottom">
+        <div class="form-wrap">
+            <a class="layui-btn layui-btn layui-btn-primary" id="cancel1">取消</a>
+            <a class="layui-btn" id="imgsave"  lay-submit="">完成</a>
         </div>
-   
+    </div>
+</form>
